[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
once_cell = "1.15.0"
parking_lot = "0.12.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tera = "1.17.1"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "signal", "fs"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
